--- a/vite/package.json
+++ b/vite/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "auto-build": "node watcher.cjs"
   },
   "dependencies": {
     "@types/node": "^24.3.1",
     "axios": "^1.11.0",
+    "chokidar-cli": "^3.0.0",
     "element-plus": "^2.11.2",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
