--- a/vite/package.json
+++ b/vite/package.json
@@ -10,6 +10,9 @@
     "auto-build": "node watcher.cjs"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
     "@types/node": "^24.3.1",
     "axios": "^1.11.0",
     "chokidar-cli": "^3.0.0",
